--- a/notebooks/covid19_per_province.ipynb
+++ b/notebooks/covid19_per_province.ipynb
@@ -31,26 +31,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from pyspark.context import SparkContext\n",
-    "from pyspark.sql.session import SparkSession\n",
-    "from pyspark.sql.functions import col\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import string\n",
-    "\n",
-    "sc = SparkContext.getOrCreate()\n",
-    "spark = SparkSession(sc)\n",
-    "\n",
-    "df = spark.read.format('csv').option('header', True).load('Covid19Casos.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -58,7 +38,7 @@
     "sc = SparkContext.getOrCreate()\n",
     "spark = SparkSession(sc)\n",
     "\n",
-    "#df = spark.createDataFrame(pdDF)\n",
+    "df = spark.createDataFrame(pdDF)\n",
     "\n",
     "provincias = df.select('residencia_provincia_nombre','fallecido').where(col('clasificacion_resumen').like('Confirmado'))"
    ]
