--- a/notebooks/effects_covid19.ipynb
+++ b/notebooks/effects_covid19.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# The effects of the Covid 19 in Argentina using Apache Spark.\n",
     "\n",
-    "In all this examples we will be downloading official data from \"datos.gob.ar\" using Pandas library and filtering the dataframes with PySpark."
+    "In all this examples we will be downloading official data from \"datos.gob.ar\" using Pandas library and loading the dataframes with PySpark."
    ]
   },
   {
