--- a/notebooks/effects_covid19.ipynb
+++ b/notebooks/effects_covid19.ipynb
@@ -16,7 +16,7 @@
     "## Covid 19 confirmed cases in each provinces. \n",
     "\n",
     "We downloaded the data from \"https://sisa.msal.gov.ar/datos/descargas/covid-19/files/Covid19Casos.csv\".\n",
-    "We filtered it taking into account only confirmed cases and divided between those who recovered and those who passed away.\n",
+    "We extracted it taking into account only confirmed cases and divided between those who recovered and those who passed away.\n",
     "\n",
     "*Beware: the Covid19Casos.csv file is 1,2gb it may take a while to download it.*"
    ]
